sorted  options validation
